--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    }
 }
 
 dependencies {
@@ -32,4 +37,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.7.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
+
+    implementation "org.koin:koin-android:2.0.0-rc-2"
+    implementation "org.koin:koin-android-scope:2.0.0-rc-2"
+    implementation "org.koin:koin-android-viewmodel:2.0.0-rc-2"
+
+    implementation project(":marvel-data")
+    implementation project(":marvel-domain")
+    implementation project(":marvel-presentation")
 }
