--- a/marvel-presentation/build.gradle
+++ b/marvel-presentation/build.gradle
@@ -30,7 +30,14 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation "org.koin:koin-android:2.0.0-rc-2"
+    implementation "org.koin:koin-android-scope:2.0.0-rc-2"
+    implementation "org.koin:koin-android-viewmodel:2.0.0-rc-2"
+
+    implementation project(":marvel-domain")
 }
