--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation "org.koin:koin-android-scope:2.0.0-rc-2"
     implementation "org.koin:koin-android-viewmodel:2.0.0-rc-2"
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+
     implementation project(":marvel-data")
     implementation project(":marvel-domain")
     implementation project(":marvel-presentation")
