--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:2.0.0-rc-2"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation project(":marvel-data")
     implementation project(":marvel-domain")
