--- a/marvel-domain/build.gradle
+++ b/marvel-domain/build.gradle
@@ -6,6 +6,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'org.mockito:mockito-core:2.23.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2"
+    testImplementation "com.nhaarman:mockito-kotlin:1.4.0"
 }
 
 sourceCompatibility = "8"
