--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'buildsystem/dependencies.gradle'
+
 
 buildscript {
     ext.kotlin_version = '1.3.50'
+    ext.gradle_tools = '3.5.3'
+    ext.build_tools = '29.0.2'
+
+    ext.compile_sdk = 29
+    ext.target_sdk = 29
+    ext.min_sdk = 21
+
+    ext.application_id = 'com.fernandocejas.sample'
+    ext.version_name = '1.0'
+    ext.version_code = 1
+    ext.test_runner = 'android.support.test.runner.AndroidJUnitRunner'
+
     repositories {
         google()
         jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath "com.android.tools.build:gradle:$gradle_tools"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
