--- a/marvel-presentation/build.gradle
+++ b/marvel-presentation/build.gradle
@@ -1,47 +1,19 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
-
-
-    defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-}
+apply from: "$rootDir/common-android-library.gradle"
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    def appDependencies = rootProject.ext.app
+    implementation appDependencies.recyclerView
+    implementation appDependencies.constraintLayout
 
-    implementation "org.koin:koin-android:2.0.0-rc-2"
-    implementation "org.koin:koin-android-scope:2.0.0-rc-2"
-    implementation "org.koin:koin-android-viewmodel:2.0.0-rc-2"
+    def koinDependencies = rootProject.ext.koin
+    implementation koinDependencies.koin
+    implementation koinDependencies.koin_scope
+    implementation koinDependencies.koin_viewmodel
 
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    def glideDependencies = rootProject.ext.glide
+    implementation glideDependencies.glide
+    annotationProcessor glideDependencies.glide_compiler
 
-    implementation project(":marvel-domain")
+    def moduleDependencies = rootProject.ext.modules
+    implementation moduleDependencies.domain
 }
