--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
     ext.target_sdk = 29
     ext.min_sdk = 21
 
-    ext.application_id = 'com.fernandocejas.sample'
+    ext.application_id = 'com.abecerra.marvel'
     ext.version_name = '1.0'
     ext.version_code = 1
     ext.test_runner = 'android.support.test.runner.AndroidJUnitRunner'
