--- a/marvel-presentation/build.gradle
+++ b/marvel-presentation/build.gradle
@@ -1,4 +1,6 @@
 apply from: "$rootDir/common-android-library.gradle"
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 dependencies {
     def appDependencies = rootProject.ext.app
@@ -12,6 +14,8 @@ dependencies {
 
     def glideDependencies = rootProject.ext.glide
     implementation glideDependencies.glide
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     annotationProcessor glideDependencies.glide_compiler
 
     def moduleDependencies = rootProject.ext.modules
