--- a/marvel-presentation/src/main/AndroidManifest.xml
+++ b/marvel-presentation/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.abecerra.marvel_presentation" />
+    package="com.abecerra.marvel_presentation">
+
+    <application>
+        <activity android:name=".ui.main.MainActivity"></activity>
+    </application>
+
+</manifest>
