--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_tools"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "io.realm:realm-gradle-plugin:6.0.2"
     }
 }
 
