--- a/marvel-data/build.gradle
+++ b/marvel-data/build.gradle
@@ -1,4 +1,5 @@
 apply from: "$rootDir/common-android-library.gradle"
+apply plugin: 'realm-android'
 
 dependencies {
     def retrofitDependencies = rootProject.ext.retrofit
