--- a/marvel-data/src/main/AndroidManifest.xml
+++ b/marvel-data/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.abecerra.marvel_data" />
+    package="com.abecerra.marvel_data" >
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+</manifest>
