--- a/marvel-presentation/build.gradle
+++ b/marvel-presentation/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     annotationProcessor glideDependencies.glide_compiler
 
+    implementation 'com.aurelhubert:ahbottomnavigation:2.1.0' // BottomNavigation
+
     def moduleDependencies = rootProject.ext.modules
     implementation moduleDependencies.domain
 }
